# cadence-app

./: .gitignore  README.md  backend_endpoints.md  frontend_api_integration_plan.md  frontend_pwa_plan.md  lambda_axum_hybrid_plan.md  openapi-types_plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  task-management_plan.md
backend/: .gitignore  Cargo.toml  Justfile  README.md  backend_endpoints.md  build.rs  lambda_monolith_plan.md  lambda_sqlite_sync_plan.md  openapi.json
backend/docs/cadence-api/: bruno.json  health.bru  list-create.bru  list-get.bru  test.bru  user-login.bru  user-me.bru  user-register.bru
backend/docs/cadence-api/environments/: candence-app.bru  sample.bru
backend/src/: constants.rs  error.rs  lib.rs  main.rs
backend/src/access/: error.rs  list.rs  local_repo.rs  mod.rs  task.rs  traits.rs  user.rs  util.rs
backend/src/access/local_repo/: mod.rs  task.rs
backend/src/domain/: list.rs  mod.rs  user.rs
backend/src/handlers/: health.rs  list.rs  login.rs  mod.rs  register.rs  task.rs  user.rs  util.rs
backend/src/handlers/util/: auth.rs  id.rs  mod.rs
backend/src/manager/: app_manager.rs  auth.rs  list.rs  mod.rs  task.rs
backend/tests/: health.rs  list.rs  login.rs  login_integration_test.rs  register.rs  task.rs  user_me.rs
backend/tests/common/: mod.rs
frontend/: README.md  biome.json  components.json  index.html  package.json  plan.md  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/public/mock/: lists.json  user.json
frontend/src/: App.tsx  index.css  main.tsx
infra/: .env.example  .gitignore  README.md  cdk.json  package.json
infra/lib/: infra-stack.ts
scripts/: deploy-backend.ts  deploy-frontend.ts  dev.ts
(+18 files in other folders)
