[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
http-body-util = "0.1.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
