[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
argon2 = "0.5.3"
async-trait = "0.1.86"
axum = "0.8.8"
axum-valid = "0.24.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
http-body-util = "0.1.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
password-hash = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
